task-112829-Rfq success page alignment issue fixed

--- a/application/views/scss/components/_misc.scss
+++ b/application/views/scss/components/_misc.scss
@@ -829,27 +829,27 @@ mark,
 /* Used in blog search autocomplete. */
 .text-suggestions {
     -webkit-flex: 1;
-  
+
     flex: 1;
-  
+
     display: -webkit-flex;
-  
+
     display: flex;
     -webkit-flex-direction: column;
-  
+
     flex-direction: column;
     font-size: 0.75rem;
-  
+
     li {
         padding-bottom: 8px;
         transition: all 0.2s ease-in-out;
-  
+
         a {
             display: block;
             position: relative;
-  
+
             transition: all 0.2s linear;
-  
+
             &:before {
                 visibility: hidden;
                 opacity: 0;
@@ -864,14 +864,14 @@ mark,
                 border-top: 1px solid currentColor;
                 border-#{$end-direction}: 1px solid currentColor;
                 transform: rotate(45deg);
-  
+
                 transition: all 0.2s linear;
             }
-  
+
             &:hover {
                 margin-#{$start-direction}: 10px;
                 color: $brand-color;
-  
+
                 &:before {
                     #{$start-direction}: -12px;
                     visibility: visible;
@@ -880,4 +880,28 @@ mark,
             }
         }
     }
-  }
+}
+
+.dropdown-addresses {
+    .btn-dropdown {
+        border-radius: $input-border-radius;
+        width: 100%;
+        gap: 10px;
+        padding-#{$start-direction}: 1rem;
+    }
+
+    .dropdown-menu-option {
+        cursor: pointer;
+        font-weight: 400;
+    }
+}
+
+.dropdown-menu-addresses {
+    max-height: 250px;
+    overflow-y: auto;
+
+    .dropdown-menu-link {
+        font-size: 0.85rem;
+        font-weight: 400;
+    }
+}
